--- a/Code.ipynb
+++ b/Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPcUhRG92NPi/bbJqFeL3dZ",
+      "authorship_tag": "ABX9TyPFVk+cyFefzDLl0FDH+pyu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,31 +28,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# Write a Python program to check whether a given number is Prime or not.\n",
+        "\n",
+        "a = int(input(\"Enter a number: \"))\n",
+        "\n",
+        "if a <= 1:\n",
+        "    print(\"The number is not a prime number\",a)\n",
+        "else:\n",
+        "    for i in range(2, a):\n",
+        "        if a % i == 0:\n",
+        "            print(\"The number is not a prime number\",a)\n",
+        "            break\n",
+        "    else:\n",
+        "        print(\"The number is a prime number\",a)"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "yaXRxMmbhJNP",
-        "outputId": "df378694-5943-47b1-bcf4-700e69ac0f0d"
+        "id": "NM4cV14wp916",
+        "outputId": "1e41ebed-1891-47b7-bf4a-89bef117e80a"
       },
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter your age:20\n",
-            "You are eligible for DL.\n"
+            "Enter a number: 15\n",
+            "The number is not a prime number 15\n"
           ]
         }
-      ],
-      "source": [
-        "a = 18\n",
-        "b = int(input(\"Enter your age:\"))\n",
-        "if a<b:\n",
-        "       print(\"You are eligible for DL.\")\n",
-        "else:\n",
-        "      print(\"You are not eligible for DL.\")"
       ]
     }
   ]
